# viering-chess-gui

./: Cargo.toml
src/: components.rs  game_ui.rs  main.rs  resources.rs  ui.rs
src/game/: game_ui.rs  mod.rs  networking.rs  resources.rs  utils.rs
src/game/systems/: board.rs  input.rs  resource_setup.rs  setup.rs
src/general/: mod.rs  resources.rs  setup.rs
src/main_menu/: main_menu.rs  mod.rs
src/splash/: mod.rs  splash.rs
src/systems/: board.rs  input.rs  mod.rs  pieces.rs  resource_setup.rs  setup.rs
