[package]
name = "viering-chess-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_mod_outline = "0.8"
bevy_mod_picking = {version = "0.20.1", default-features = false, features = ["backend_raycast", "backend_bevy_ui"]}
bevy_hanabi = "0.12"
vhultman-chess = { git = "https://github.com/inda24PlusPlus/vhultman-chess.git" }
chess-networking = { git = "https://github.com/INDA24PlusPlus/chess-networking.git" }
bevy_simple_text_input = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
